# mypoject

./: pyproject.toml
myproject/: app.py  database.py  models.py  settings.py
tests/: conftest.py  test_app.py
