[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0" 
dependencies = [
    "fastapi[standard] (>=0.120.2,<0.121.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.14.2,<0.15.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)"
]

[tool.ruff.lint]
preview = true
[tool.ruff.format]
preview = true
[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'
[tool.taskipy.tasks]
l = 'ruff check'
pre_format = 'ruff check --fix'
f = 'ruff format'
r = 'fastapi dev myproject/app.py'
pre_test = 'task lint'
t = 'pytest -s -x --cov=myproject -vv'
pt = 'coverage html'